Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Playvision.github.io by playvision</title>
+    <title>Playvision.github.io2 by playvision</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Playvision.github.io</h1>
+        <h1>Playvision.github.io2</h1>
         <h2></h2>
         <a href="https://github.com/playvision" class="button"><small>Follow me on</small>GitHub</a>
       </div>
